# ClawShell

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  clawshell.toml
config/: clawshell.toml  clawshell_dist.toml  security_filter_rules.toml
daemon-service/core/: capability_service.cc  module_manager.cc
daemon-service/daemon/: daemon.cc  main.cc  vmm_launcher.cc
daemon-service/ipc/: frame.cc  frame.h  json_rpc_status_converter.cc  pipe_security.h  windows_ipc_server.cc
docs/: development-standards.md  ui-design-draft.md  vmm-progress.md
include/common/: error.h  log.h  safe_handle.h  status.h  status_converter.h  toml_utility.h  types.h  unaligned.h
include/ipc/: ipc_client.h  ipc_server.h  windows_ipc_client.h  windows_ipc_server.h
include/vmm/: vm_manager.h  vmm_channel.h  vsock_server.h
mcp/server/: mcp_server.py  vsock_client.py
scripts/: build-rootfs.sh  clawshell-vsock-port100.reg  fix-commit-msg.bat  install.ps1  register-vsock-port100.ps1  remove-docs-from-history.ps1  reword-first.ps1  set-commit-msg.cmd  strip-cursor-msg.ps1
src/core/: module_config.cc  security_chain.cc
src/daemon/: daemon.h  main.cc
src/ipc/: json_rpc_status_converter.h  windows_ipc_client.cc  windows_ipc_server.cc
tools/: ax_test_client.py  confirm_client.py  edge_access.txt  mcp_client.py  mcp_server.py  requirements.txt
ui/: App.cs  ClawShellUI.csproj  Program.cs
vmm/: CMakeLists.txt  main.cc  vmm_app.cc
vmm/ipc/: hvsocket_defs.h  vsock_server.cc
vmm/tools/: vsock_probe_main.cc
vmm/vm/: vm_manager.cc  wsl_com_interfaces.h  wslapi_loader.h
(+53 files in other folders)
